# mana

./: Untitled.ipynb  pyproject.toml
mana/: __init__.py  env.py
mana/engine/: errors.py  rules.py  state.py
mana/tests/: conftest.py  factories.py  test_casting.py  test_combat.py  test_end.py  test_env.py  test_rules.py  test_state.py
