[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mana"
version = "0.0.1"
description = "Simplified MTG engine and RL env (starter)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "gymnasium>=0.29.1"
]

[project.optional-dependencies]
dev = [
"pytest>=8.0",
]